# helion

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  README.md  lint.sh  pyproject.toml  requirements.txt
.github/: matrix.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  benchmark_dispatch.yml  docs-deploy.yml  docs-test.yml  lint.yml  merge.yml  publish-to-pypi.yml  revert.yml  test-template.yml  test.yml
benchmark/: README.md  run.py
benchmarks/: README.md  run.py
docs/: Makefile  README.md  conf.py  helion_puzzles.rst  index.md  installation.md
docs/api/: autotuner.md  config.md  exceptions.md  index.md  kernel.md  language.md  runtime.md  settings.md
examples/: README.rst  add.py  all_gather_matmul.py  all_reduce.py  attention.py  bmm.py  concatenate.py  cross_entropy.py  embedding.py  exp.py  fp8_attention.py  fp8_gemm.py  fused_linear_jsd.py  geglu.py  int4_gemm.py  jagged_dense_add.py  jagged_hstu_attn.py  jagged_mean.py  jagged_softmax.py  jsd.py  kl_div.py  layer_norm.py  long_sum.py  matmul.py  matmul_layernorm.py  matmul_split_k.py  moe_matmul_ogs.py  rms_norm.py  segment_reduction.py  softmax.py  sum.py  swiglu.py  template_via_closure.py  welford.py
helion/: __init__.py  _compat.py  _testing.py  _utils.py  exc.py  utils.py
helion/_compiler/: ast_extension.py  ast_read_writes.py  compile_environment.py  device_function.py  device_ir.py  dtype_utils.py  error_reporting.py  generate_ast.py  helper_function.py  host_function.py  indexing_strategy.py  inductor_lowering.py  inductor_lowering_extra.py  lift_closures.py  loop_dependency_checker.py  matmul_utils.py  node_masking.py  output_header.py  program_id.py  reduction_strategy.py  roll_reduction.py  source_location.py  static_loop_unroller.py  tile_dispatch.py  tile_index_proxy.py  tile_strategy.py  traceback_compat.py  type_printer.py  type_propagation.py  utils.py  variable_origin.py
helion/_logging/: _internal.py
helion/autotuner/: __init__.py  base_cache.py  base_search.py  block_id_sequence.py  config_fragment.py  config_generation.py  config_spec.py  differential_evolution.py  finite_search.py  local_cache.py  logger.py  (+1 more)
linter/: check_main.py
scripts/: dictionary.txt
test/: test_associative_scan.expected  test_associative_scan.py  test_atomic_add.expected  test_atomic_add.py  test_atomic_ops.expected  test_atomic_ops.py  test_autotuner.expected  test_autotuner.py  test_broadcasting.expected  test_broadcasting.py  test_cache.py  test_closures.expected  test_closures.py  test_constexpr.expected  test_constexpr.py  test_control_flow.expected  test_control_flow.py  test_dot.expected  test_dot.py  test_dot_requirements.py  test_errors.py  test_examples.expected  test_examples.py  test_generate_ast.expected  test_generate_ast.py  test_graph_module.expected  test_graph_module.py  test_grid.expected  test_grid.py  test_indexing.expected  test_indexing.py  test_inline_asm_elementwise.expected  test_inline_asm_elementwise.py  test_logging.py  test_loop_dependencies.py  test_loops.expected  test_loops.py  test_masking.expected  test_masking.py  test_matmul.expected  (+30 more)
(+30 files in other folders)
